<resources>
    <string name="app_name">Smart Eight Admin</string>
    <string name="app_title">Smart Eight Admin</string>
    <string name="et_email">Email address</string>
    <string name="et_password">Password</string>
    <string name="btn_login">Sign In</string>
    <string name="et_nama">Name</string>
    <string name="et_status">Status</string>
    <string name="error_et_empty">Data must be field</string>
    <string name="error_et_email_format_wrong">Format email not valid</string>
    <string name="label_presence">Attendance</string>
    <string name="label_announcement">Announcement</string>
    <string name="label_user">Users</string>
    <string name="tv_body_announcement">Body</string>
    <string name="tv_date_announcement">Date</string>
    <string name="tv_time_attendance">Time</string>
    <string name="tv_title_announcement">Title</string>
    <string name="btn_add">Send</string>
    <string name="logout">Logout</string>
    <string name="data_empty">Nothing announcement</string>
    <string name="update">Update</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="no">No</string>
    <string name="delete">Delete</string>
    <string name="message_update">Success update announcement</string>
    <string name="message_add">Success add announcement</string>
    <string name="message_edit_warning">You dont have permission to edit this announcement</string>
    <string name="message_delete_warning">You dont have permission to delete this announcement</string>
    <string name="message_cancel">Are you sure to cancel without save all change in this form? All change in this form will be delete if you cancel it</string>
    <string name="message_delete_alert">Are you sure to delete this announcement? You can not undo this action</string>
    <string name="title_notification">New Announcement!</string>
    <string name="detail_announcement">Detail Announcement</string>
    <string name="tv_subtitle">Information and Presence</string>
    <string name="activity">Activity</string>
    <string name="work_from_office">Work From Office</string>
    <string name="work_from_home">Work From Home</string>
    <string name="error_et_password_less_than_5">Password must have more than 5 character</string>
    <string name="title_dialog_permission">Request permission</string>
    <string name="msg_dialog_permission">Application Smart Eight can not use without permission access to camera and internal storage</string>
    <string name="msg_request_permission">Feature camera and internal storage needs to use this app</string>
    <string name="btn_positive">Granted</string>
    <string name="btn_negative">Cancel</string>
</resources>